--- a/index.html
+++ b/index.html
@@ -34,3 +34,12 @@
       color: #000;
       border: none;
       border-radius: 6px;
+    }
+  </style>
+</head>
+<body>
+  <button id="startCam">启动摄像头</button>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
+  <script src="sketch.js"></script>
+</body>
+</html>
