--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,viewport-fit=cover" />
-  <title>Koukou AR HUD</title>
+  <title>Stratigraphy of presence</title>
   <style>
     html,body { height:100%; margin:0; background:#000; }
     #cameraElement {
@@ -41,5 +41,6 @@
   <script src="sketch.js"></script>
 </body>
 </html>
+
 
 
