--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
   <script src="sketch.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/apriltag-js@0.3.2/build/apriltag.min.js"></script>
 </body>
 </html>
+
 
 
 
